2004-08-25  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr-css.cpp (sp_repr_css_print):
	  Fix for shared string change.

	* src/sp-text.cpp: CodingStyle changes, including moving some
	  declarations to first use.
	  Remove unused __SP_TEXT_C__ define.

2004-08-25  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-cursor.cpp, src/sp-cursor.h, src/sp-guide.cpp:
	coding style cleanups.

2004-08-24  MenTaLguY <mental@rydia.net>

	* src/gc-anchor.h: fix to always use the GC base address, since
	  that will not always be the same as 'this', when I::GC::Anchored
	  is used via multiple inheritance.

2004-08-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/TextWrapper.h, src/libnrtype/TextWrapper.cpp (AppendUTF8):
	  Use strlen instead of for-loop.
	  Change printf to g_return_if_fail (and document that the argument
	  must be valid UTF-8).
	  Mark the text pointer as not being written through (const).

2004-08-23  MenTaLguY <mental@rydia.net>

	* src/xml/repr.cpp, src/xml/sp-repr-action.h:

	  removed stupid default 'next' constructor arguments and force them
	  to be specified explicitly (and fix the omission of one, which
	  fixes bug #1014541)

2004-08-22  MenTaLguY <mental@rydia.net>

	* src/Makefile_insert, src/gc-alloc.h:

	  introduced a GC-aware STL allocator

	* src/document-private.h, src/document.h, src/document.cpp:

	  switch to using STL map for "id changed" signals

2004-08-21  MenTaLguY <mental@rydia.net>

	* src/Makefile_insert, src/util/Makefile_insert: get libinkutil
	  deps straightened out

	* src/document-private.h, src/document-undo.cpp, src/document.cpp:

	  adapt for new APIs, header cleanups/refactorings

	* src/gc-core.h, src/gc-anchored.h, src/gc-finalized.h, src/gc-managed.h:

	  rewrote interface to Boehm GC for increased flexibility; there are now
	  three main classes:
	  
	   - Inkscape::GC::Managed: objects managed by the GC; replaces
	                            Inkscape::GC::Object
